seaqt/QtWidgets/gen_qundoview.h

typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QIcon QIcon;
typedef struct QItemSelection QItemSelection;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QResizeEvent QResizeEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionViewItem QStyleOptionViewItem;
typedef struct QTimerEvent QTimerEvent;
typedef struct QUndoGroup QUndoGroup;
typedef struct QUndoStack QUndoStack;
typedef struct QUndoView QUndoView;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QUndoView* QUndoView_new(QWidget* parent);
QUndoView* QUndoView_new2();
QUndoView* QUndoView_new3(QUndoStack* stack);
QUndoView* QUndoView_new4(QUndoGroup* group);
QUndoView* QUndoView_new5(QUndoStack* stack, QWidget* parent);
QUndoView* QUndoView_new6(QUndoGroup* group, QWidget* parent);
QMetaObject* QUndoView_metaObject(const QUndoView* self);
void* QUndoView_metacast(QUndoView* self, const char* param1);
int QUndoView_metacall(QUndoView* self, int param1, int param2, void** param3);
struct miqt_string QUndoView_tr(const char* s);
struct miqt_string QUndoView_trUtf8(const char* s);
QUndoStack* QUndoView_stack(const QUndoView* self);
QUndoGroup* QUndoView_group(const QUndoView* self);
void QUndoView_setEmptyLabel(QUndoView* self, struct miqt_string label);
struct miqt_string QUndoView_emptyLabel(const QUndoView* self);
void QUndoView_setCleanIcon(QUndoView* self, QIcon* icon);
QIcon* QUndoView_cleanIcon(const QUndoView* self);
void QUndoView_setStack(QUndoView* self, QUndoStack* stack);
void QUndoView_setGroup(QUndoView* self, QUndoGroup* group);
struct miqt_string QUndoView_tr2(const char* s, const char* c);
struct miqt_string QUndoView_tr3(const char* s, const char* c, int n);
struct miqt_string QUndoView_trUtf82(const char* s, const char* c);
struct miqt_string QUndoView_trUtf83(const char* s, const char* c, int n);
bool QUndoView_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QUndoView_virtualbase_metaObject(const void* self);
bool QUndoView_override_virtual_metacast(void* self, intptr_t slot);
void* QUndoView_virtualbase_metacast(void* self, const char* param1);
bool QUndoView_override_virtual_metacall(void* self, intptr_t slot);
int QUndoView_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QUndoView_override_virtual_visualRect(void* self, intptr_t slot);
QRect* QUndoView_virtualbase_visualRect(const void* self, QModelIndex* index);
bool QUndoView_override_virtual_scrollTo(void* self, intptr_t slot);
void QUndoView_virtualbase_scrollTo(void* self, QModelIndex* index, int hint);
bool QUndoView_override_virtual_indexAt(void* self, intptr_t slot);
QModelIndex* QUndoView_virtualbase_indexAt(const void* self, QPoint* p);
bool QUndoView_override_virtual_doItemsLayout(void* self, intptr_t slot);
void QUndoView_virtualbase_doItemsLayout(void* self);
bool QUndoView_override_virtual_reset(void* self, intptr_t slot);
void QUndoView_virtualbase_reset(void* self);
bool QUndoView_override_virtual_setRootIndex(void* self, intptr_t slot);
void QUndoView_virtualbase_setRootIndex(void* self, QModelIndex* index);
bool QUndoView_override_virtual_event(void* self, intptr_t slot);
bool QUndoView_virtualbase_event(void* self, QEvent* e);
bool QUndoView_override_virtual_scrollContentsBy(void* self, intptr_t slot);
void QUndoView_virtualbase_scrollContentsBy(void* self, int dx, int dy);
bool QUndoView_override_virtual_dataChanged(void* self, intptr_t slot);
void QUndoView_virtualbase_dataChanged(void* self, QModelIndex* topLeft, QModelIndex* bottomRight, struct miqt_array /* of int */  roles);
bool QUndoView_override_virtual_rowsInserted(void* self, intptr_t slot);
void QUndoView_virtualbase_rowsInserted(void* self, QModelIndex* parent, int start, int end);
bool QUndoView_override_virtual_rowsAboutToBeRemoved(void* self, intptr_t slot);
void QUndoView_virtualbase_rowsAboutToBeRemoved(void* self, QModelIndex* parent, int start, int end);
bool QUndoView_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_mouseMoveEvent(void* self, QMouseEvent* e);
bool QUndoView_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* e);
bool QUndoView_override_virtual_wheelEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_wheelEvent(void* self, QWheelEvent* e);
bool QUndoView_override_virtual_timerEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_timerEvent(void* self, QTimerEvent* e);
bool QUndoView_override_virtual_resizeEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_resizeEvent(void* self, QResizeEvent* e);
bool QUndoView_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* e);
bool QUndoView_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* e);
bool QUndoView_override_virtual_dropEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_dropEvent(void* self, QDropEvent* e);
bool QUndoView_override_virtual_startDrag(void* self, intptr_t slot);
void QUndoView_virtualbase_startDrag(void* self, int supportedActions);
bool QUndoView_override_virtual_viewOptions(void* self, intptr_t slot);
QStyleOptionViewItem* QUndoView_virtualbase_viewOptions(const void* self);
bool QUndoView_override_virtual_paintEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_paintEvent(void* self, QPaintEvent* e);
bool QUndoView_override_virtual_horizontalOffset(void* self, intptr_t slot);
int QUndoView_virtualbase_horizontalOffset(const void* self);
bool QUndoView_override_virtual_verticalOffset(void* self, intptr_t slot);
int QUndoView_virtualbase_verticalOffset(const void* self);
bool QUndoView_override_virtual_moveCursor(void* self, intptr_t slot);
QModelIndex* QUndoView_virtualbase_moveCursor(void* self, int cursorAction, int modifiers);
bool QUndoView_override_virtual_setSelection(void* self, intptr_t slot);
void QUndoView_virtualbase_setSelection(void* self, QRect* rect, int command);
bool QUndoView_override_virtual_visualRegionForSelection(void* self, intptr_t slot);
QRegion* QUndoView_virtualbase_visualRegionForSelection(const void* self, QItemSelection* selection);
bool QUndoView_override_virtual_selectedIndexes(void* self, intptr_t slot);
struct miqt_array /* of QModelIndex* */  QUndoView_virtualbase_selectedIndexes(const void* self);
bool QUndoView_override_virtual_updateGeometries(void* self, intptr_t slot);
void QUndoView_virtualbase_updateGeometries(void* self);
bool QUndoView_override_virtual_isIndexHidden(void* self, intptr_t slot);
bool QUndoView_virtualbase_isIndexHidden(const void* self, QModelIndex* index);
bool QUndoView_override_virtual_selectionChanged(void* self, intptr_t slot);
void QUndoView_virtualbase_selectionChanged(void* self, QItemSelection* selected, QItemSelection* deselected);
bool QUndoView_override_virtual_currentChanged(void* self, intptr_t slot);
void QUndoView_virtualbase_currentChanged(void* self, QModelIndex* current, QModelIndex* previous);
bool QUndoView_override_virtual_viewportSizeHint(void* self, intptr_t slot);
QSize* QUndoView_virtualbase_viewportSizeHint(const void* self);
bool QUndoView_override_virtual_setModel(void* self, intptr_t slot);
void QUndoView_virtualbase_setModel(void* self, QAbstractItemModel* model);
void QUndoView_virtualbase_setSelectionModel(void* self, QItemSelectionModel* selectionModel);