seaqt/QtWidgets/gen_qundoview.nim


proc fcQUndoView_new(parent: pointer): ptr cQUndoView {.importc: "QUndoView_new".}
proc fcQUndoView_new2(): ptr cQUndoView {.importc: "QUndoView_new2".}
proc fcQUndoView_new3(stack: pointer): ptr cQUndoView {.importc: "QUndoView_new3".}
proc fcQUndoView_new4(group: pointer): ptr cQUndoView {.importc: "QUndoView_new4".}
proc fcQUndoView_new5(stack: pointer, parent: pointer): ptr cQUndoView {.importc: "QUndoView_new5".}
proc fcQUndoView_new6(group: pointer, parent: pointer): ptr cQUndoView {.importc: "QUndoView_new6".}
proc fcQUndoView_metaObject(self: pointer, ): pointer {.importc: "QUndoView_metaObject".}
proc fcQUndoView_metacast(self: pointer, param1: cstring): pointer {.importc: "QUndoView_metacast".}
proc fcQUndoView_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QUndoView_metacall".}
proc fcQUndoView_tr(s: cstring): struct_miqt_string {.importc: "QUndoView_tr".}
proc fcQUndoView_trUtf8(s: cstring): struct_miqt_string {.importc: "QUndoView_trUtf8".}
proc fcQUndoView_stack(self: pointer, ): pointer {.importc: "QUndoView_stack".}
proc fcQUndoView_group(self: pointer, ): pointer {.importc: "QUndoView_group".}
proc fcQUndoView_setEmptyLabel(self: pointer, label: struct_miqt_string): void {.importc: "QUndoView_setEmptyLabel".}
proc fcQUndoView_emptyLabel(self: pointer, ): struct_miqt_string {.importc: "QUndoView_emptyLabel".}
proc fcQUndoView_setCleanIcon(self: pointer, icon: pointer): void {.importc: "QUndoView_setCleanIcon".}
proc fcQUndoView_cleanIcon(self: pointer, ): pointer {.importc: "QUndoView_cleanIcon".}
proc fcQUndoView_setStack(self: pointer, stack: pointer): void {.importc: "QUndoView_setStack".}
proc fcQUndoView_setGroup(self: pointer, group: pointer): void {.importc: "QUndoView_setGroup".}
proc fcQUndoView_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QUndoView_tr2".}
proc fcQUndoView_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QUndoView_tr3".}
proc fcQUndoView_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QUndoView_trUtf82".}
proc fcQUndoView_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QUndoView_trUtf83".}
proc fQUndoView_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QUndoView_virtualbase_metaObject".}
proc fcQUndoView_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_metaObject".}
proc fQUndoView_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QUndoView_virtualbase_metacast".}
proc fcQUndoView_override_virtual_metacast(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_metacast".}
proc fQUndoView_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QUndoView_virtualbase_metacall".}
proc fcQUndoView_override_virtual_metacall(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_metacall".}
proc fQUndoView_virtualbase_visualRect(self: pointer, index: pointer): pointer{.importc: "QUndoView_virtualbase_visualRect".}
proc fcQUndoView_override_virtual_visualRect(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_visualRect".}
proc fQUndoView_virtualbase_scrollTo(self: pointer, index: pointer, hint: cint): void{.importc: "QUndoView_virtualbase_scrollTo".}
proc fcQUndoView_override_virtual_scrollTo(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_scrollTo".}
proc fQUndoView_virtualbase_indexAt(self: pointer, p: pointer): pointer{.importc: "QUndoView_virtualbase_indexAt".}
proc fcQUndoView_override_virtual_indexAt(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_indexAt".}
proc fQUndoView_virtualbase_doItemsLayout(self: pointer, ): void{.importc: "QUndoView_virtualbase_doItemsLayout".}
proc fcQUndoView_override_virtual_doItemsLayout(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_doItemsLayout".}
proc fQUndoView_virtualbase_reset(self: pointer, ): void{.importc: "QUndoView_virtualbase_reset".}
proc fcQUndoView_override_virtual_reset(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_reset".}
proc fQUndoView_virtualbase_setRootIndex(self: pointer, index: pointer): void{.importc: "QUndoView_virtualbase_setRootIndex".}
proc fcQUndoView_override_virtual_setRootIndex(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_setRootIndex".}
proc fQUndoView_virtualbase_event(self: pointer, e: pointer): bool{.importc: "QUndoView_virtualbase_event".}
proc fcQUndoView_override_virtual_event(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_event".}
proc fQUndoView_virtualbase_scrollContentsBy(self: pointer, dx: cint, dy: cint): void{.importc: "QUndoView_virtualbase_scrollContentsBy".}
proc fcQUndoView_override_virtual_scrollContentsBy(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_scrollContentsBy".}
proc fQUndoView_virtualbase_dataChanged(self: pointer, topLeft: pointer, bottomRight: pointer, roles: struct_miqt_array): void{.importc: "QUndoView_virtualbase_dataChanged".}
proc fcQUndoView_override_virtual_dataChanged(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_dataChanged".}
proc fQUndoView_virtualbase_rowsInserted(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QUndoView_virtualbase_rowsInserted".}
proc fcQUndoView_override_virtual_rowsInserted(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_rowsInserted".}
proc fQUndoView_virtualbase_rowsAboutToBeRemoved(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QUndoView_virtualbase_rowsAboutToBeRemoved".}
proc fcQUndoView_override_virtual_rowsAboutToBeRemoved(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_rowsAboutToBeRemoved".}
proc fQUndoView_virtualbase_mouseMoveEvent(self: pointer, e: pointer): void{.importc: "QUndoView_virtualbase_mouseMoveEvent".}
proc fcQUndoView_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_mouseMoveEvent".}
proc fQUndoView_virtualbase_mouseReleaseEvent(self: pointer, e: pointer): void{.importc: "QUndoView_virtualbase_mouseReleaseEvent".}
proc fcQUndoView_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_mouseReleaseEvent".}
proc fQUndoView_virtualbase_wheelEvent(self: pointer, e: pointer): void{.importc: "QUndoView_virtualbase_wheelEvent".}
proc fcQUndoView_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_wheelEvent".}
proc fQUndoView_virtualbase_timerEvent(self: pointer, e: pointer): void{.importc: "QUndoView_virtualbase_timerEvent".}
proc fcQUndoView_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_timerEvent".}
proc fQUndoView_virtualbase_resizeEvent(self: pointer, e: pointer): void{.importc: "QUndoView_virtualbase_resizeEvent".}
proc fcQUndoView_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_resizeEvent".}
proc fQUndoView_virtualbase_dragMoveEvent(self: pointer, e: pointer): void{.importc: "QUndoView_virtualbase_dragMoveEvent".}
proc fcQUndoView_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_dragMoveEvent".}
proc fQUndoView_virtualbase_dragLeaveEvent(self: pointer, e: pointer): void{.importc: "QUndoView_virtualbase_dragLeaveEvent".}
proc fcQUndoView_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_dragLeaveEvent".}
proc fQUndoView_virtualbase_dropEvent(self: pointer, e: pointer): void{.importc: "QUndoView_virtualbase_dropEvent".}
proc fcQUndoView_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_dropEvent".}
proc fQUndoView_virtualbase_startDrag(self: pointer, supportedActions: cint): void{.importc: "QUndoView_virtualbase_startDrag".}
proc fcQUndoView_override_virtual_startDrag(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_startDrag".}
proc fQUndoView_virtualbase_viewOptions(self: pointer, ): pointer{.importc: "QUndoView_virtualbase_viewOptions".}
proc fcQUndoView_override_virtual_viewOptions(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_viewOptions".}
proc fQUndoView_virtualbase_paintEvent(self: pointer, e: pointer): void{.importc: "QUndoView_virtualbase_paintEvent".}
proc fcQUndoView_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_paintEvent".}
proc fQUndoView_virtualbase_horizontalOffset(self: pointer, ): cint{.importc: "QUndoView_virtualbase_horizontalOffset".}
proc fcQUndoView_override_virtual_horizontalOffset(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_horizontalOffset".}
proc fQUndoView_virtualbase_verticalOffset(self: pointer, ): cint{.importc: "QUndoView_virtualbase_verticalOffset".}
proc fcQUndoView_override_virtual_verticalOffset(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_verticalOffset".}
proc fQUndoView_virtualbase_moveCursor(self: pointer, cursorAction: cint, modifiers: cint): pointer{.importc: "QUndoView_virtualbase_moveCursor".}
proc fcQUndoView_override_virtual_moveCursor(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_moveCursor".}
proc fQUndoView_virtualbase_setSelection(self: pointer, rect: pointer, command: cint): void{.importc: "QUndoView_virtualbase_setSelection".}
proc fcQUndoView_override_virtual_setSelection(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_setSelection".}
proc fQUndoView_virtualbase_visualRegionForSelection(self: pointer, selection: pointer): pointer{.importc: "QUndoView_virtualbase_visualRegionForSelection".}
proc fcQUndoView_override_virtual_visualRegionForSelection(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_visualRegionForSelection".}
proc fQUndoView_virtualbase_selectedIndexes(self: pointer, ): struct_miqt_array{.importc: "QUndoView_virtualbase_selectedIndexes".}
proc fcQUndoView_override_virtual_selectedIndexes(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_selectedIndexes".}
proc fQUndoView_virtualbase_updateGeometries(self: pointer, ): void{.importc: "QUndoView_virtualbase_updateGeometries".}
proc fcQUndoView_override_virtual_updateGeometries(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_updateGeometries".}
proc fQUndoView_virtualbase_isIndexHidden(self: pointer, index: pointer): bool{.importc: "QUndoView_virtualbase_isIndexHidden".}
proc fcQUndoView_override_virtual_isIndexHidden(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_isIndexHidden".}
proc fQUndoView_virtualbase_selectionChanged(self: pointer, selected: pointer, deselected: pointer): void{.importc: "QUndoView_virtualbase_selectionChanged".}
proc fcQUndoView_override_virtual_selectionChanged(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_selectionChanged".}
proc fQUndoView_virtualbase_currentChanged(self: pointer, current: pointer, previous: pointer): void{.importc: "QUndoView_virtualbase_currentChanged".}
proc fcQUndoView_override_virtual_currentChanged(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_currentChanged".}
proc fQUndoView_virtualbase_viewportSizeHint(self: pointer, ): pointer{.importc: "QUndoView_virtualbase_viewportSizeHint".}
proc fcQUndoView_override_virtual_viewportSizeHint(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_viewportSizeHint".}
proc fQUndoView_virtualbase_setModel(self: pointer, model: pointer): void{.importc: "QUndoView_virtualbase_setModel".}
proc fcQUndoView_override_virtual_setModel(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_setModel".}
proc fQUndoView_virtualbase_setSelectionModel(self: pointer, selectionModel: pointer): void{.importc: "QUndoView_virtualbase_setSelectionModel".}
